(dirs :standard \ chaff)
(data_only_dirs tex)

(library
(name tex2cnl)
(public_name tex2cnl)
(wrapped true)
(libraries sedlex batteries)
(modules lexer_tex tex2cnl type)
(preprocess (pps ppx_deriving.std  sedlex.ppx))
)

(executable
(name main)
(libraries sedlex batteries tex2cnl)
(modules main)
(preprocess (pps ppx_deriving.std sedlex.ppx))
)



