(dirs :standard menhir_parser \ chaff)

(library
(name cnl_parse)
(public_name cnl_parse)
(wrapped true)
(modules (:standard 
	 parser_cnl))
(libraries batteries menhirlib)
(virtual_deps menhir)
(preprocess (pps ppx_deriving.std))
)

; remove to end of file to disable parser_cnl
(menhir
(modules parser_cnl.ml)
(flags (--external-tokens Parser_cnl) --explain)
)

(rule
(targets parser_cnl.ml)
(deps parser_cnl.mly parser_cnl_tokens.mly)
(action (run menhir %{deps} --base parser_cnl --explain))
)

