(dirs :standard \ chaff)
(data_only_dirs scripts)

(library
(name cnl_parse)
(public_name cnl_parse)
(wrapped true)
(modules (:standard 
	 parser
	 lexer_cnl \ main))
(libraries sedlex batteries core)
(preprocess (pps ppx_deriving.std ppx_let sedlex.ppx))
)

(executable
(name main)
(libraries sedlex batteries core cnl_parse)
(modules main)
(preprocess (pps ppx_deriving.std ppx_let sedlex.ppx))
)

